--- a/test1.html
+++ b/test1.html
@@ -35,7 +35,7 @@
 
       function logout() {
         liff.logout();
-        window.location.href = "test3.html";
+        window.location.href = "https://jatnipit.github.io/liff-test/test1.html";
       }
 
       window.onload = () => {
