--- a/test3.html
+++ b/test3.html
@@ -7,6 +7,11 @@
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   </head>
   <body>
+    <div>
+      <h1>ชำระเงินค่าสมาชิกพรีเมียมสำเร็จ</h1>
+      <p>ข้อมูลของคุณถูกบันทึกเรียบร้อยแล้ว</p>
+      <p>หน้าต่างนี้จะปิดใน 5 วินาที</p>
+    </div>
     <script>
       LIFF_ID = "2007677261-Vlq8Op60";
       window.onload = () => {
